--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
         node-version: '14'
 
     - name: Install NestJS dependencies
-      run: cd nestjs-project && npm install
+      run: cd est-and-quality-bowling-score && npm install
 
     - name: Run NestJS Unit Tests
-      run: cd nestjs-project && npm test
+      run: cd test-and-quality-bowling-score && npm test
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -39,7 +39,7 @@ jobs:
           ${{ runner.os }}-maven
 
     - name: Build Gatling Project with Maven
-      run: cd gatling-project && mvn -B clean install
+      run: cd api-performance-test && mvn -B clean install
 
     - name: Run Gatling Load Tests
-      run: cd gatling-project && mvn gatling:test '-DclassName=tests.SmokeTest'
+      run: cd api-performance-test && mvn gatling:test '-DclassName=tests.SmokeTest'
