--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,17 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '15'
+        node-version: '16'
 
     - name: Install NestJS dependencies
       run: cd test-and-quality-bowling-score && npm install
 
+    - name: Ensure Jest has execute permissions
+      run: chmod +x ./node_modules/.bin/jest
+      working-directory: test-and-quality-bowling-score
+
     - name: Run NestJS Unit Tests
-      run: cd test-and-quality-bowling-score && npm test
+      run: cd test-and-quality-bowling-score && npx jest
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
